--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-select": "^2.1.4",
 		"@tabler/icons-react": "^3.22.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -19,6 +20,7 @@
 		"react": "^18",
 		"react-dom": "^18",
 		"react-toastify": "^10.0.6",
+		"recharts": "^2.15.0",
 		"tailwind-merge": "^2.5.5",
 		"tailwindcss-animate": "^1.0.7"
 	},
