--- a/package.json
+++ b/package.json
@@ -12,18 +12,21 @@
 		"@radix-ui/react-checkbox": "^1.1.3",
 		"@radix-ui/react-dialog": "^1.1.2",
 		"@radix-ui/react-dropdown-menu": "^2.1.4",
+		"@radix-ui/react-popover": "^1.1.6",
 		"@radix-ui/react-radio-group": "^1.2.2",
 		"@radix-ui/react-select": "^2.1.4",
-		"@radix-ui/react-slot": "^1.1.1",
+		"@radix-ui/react-slot": "^1.1.2",
 		"@radix-ui/react-tabs": "^1.1.3",
 		"@tabler/icons-react": "^3.22.0",
 		"@tanstack/react-table": "^8.20.6",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"date-fns": "^3.6.0",
 		"lucide-react": "^0.461.0",
 		"next": "14.2.3",
 		"next-auth": "^4.23.1",
 		"react": "^18",
+		"react-day-picker": "^8.10.1",
 		"react-dom": "^18",
 		"react-toastify": "^10.0.6",
 		"recharts": "^2.15.0",
