--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^3.6.0",
+		"google-auth-library": "^9.15.1",
 		"lucide-react": "^0.461.0",
 		"next": "14.2.3",
 		"next-auth": "^4.23.1",
