--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
 		"react-toastify": "^10.0.6",
 		"recharts": "^2.15.0",
 		"tailwind-merge": "^2.5.5",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"xlsx": "^0.18.5"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
